# PanoramaSlicer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
insta_pano/: __init__.py  config.py  gui.py  main.py  photo_picker.py  processor.py  utils.py
tests/: test_processor.py
